# Machine-Learning-Study

./: .gitignore  main.py  pyproject.toml  pyvenv.cfg  report.txt  requirements.txt
deep-learning/mnist/: hello-world.ipynb
deep-learning/notebooks/mnist/: hello-world.ipynb
deep-learning/notebooks/transformers/: fine-tuning.ipynb
deep-learning/phito-deep/: activations.py  loss.py  model.py  optimization.py  report.txt  test_example.py
deep-learning/phito-deep/layers/: activation.py  base.py
deep-learning/rnn/: shakespeare.ipynb
deep-learning/scripts/: example.py
deep-learning/transformers/: tf-transformer.ipynb
reinforcement-learning/: frozen_lake.py  lecture-1.ipynb  lecture-2.ipynb  lecture-3.ipynb  lecture-4.ipynb
reinforcement-learning/gym_scripts/: frozen_lake_mdp.py  lunar_lander.py  model_based.py  model_free.py  toy_text.py
reinforcement-learning/gymnasium/: lunar_lander.py
reinforcement-learning/mdp/: mdp.py
reinforcement-learning/model_free_control/: primary.py
reinforcement-learning/notebooks/: lecture-2.ipynb  lecture-5.org
reinforcement-learning/phito_rl/deep/: qnetwork.py
reinforcement-learning/phito_rl/policy_evaluation/: temporal_difference.py
reinforcement-learning/phito_rl/tabular/: bandit.py  dynamic.py
reinforcement-learning/policy_evaluation/: monte_carlo.py
