[project]
name = "machine-learning-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "gymnasium[all]>=1.3.0",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "phitodeep>=0.2.2",
    "swig>=4.4.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.8.1",
]
